syntax = "proto3";

package manager.api.oauth;

option go_package = ".;oauth";
option java_multiple_files = true;
option java_package = "manager.api.oauth";

import "validate/validate.proto";


message ListOAuthChannelTypeRequest{}

message ListOAuthChannelTypeReply{
  message Type{
    string keyword = 1;
    string name = 2;
  }
  repeated Type list = 1;
}


message ListOAuthChannelRequest {
  uint32 page = 1[(validate.rules).uint32 = {gte: 1}];
  uint32 pageSize = 2[(validate.rules).uint32 = {gte: 1 ,lte: 50}];
  optional string order = 3[(validate.rules).string = {in: ["asc","desc"]}];
  optional string orderBy = 4[(validate.rules).string = {in: ["id","created_at"]}];
  optional string keyword = 5;
  optional string name = 6;
  optional bool status = 7;
}

message ListOAuthChannelReply {
  message OAuthChannel {
    uint32 id = 1;
    string logo = 2;
    string keyword = 3;
    string type = 4;
    string name = 5;
    optional bool status = 6;
    string ak = 7;
    string sk = 8;
    string extra = 9;
    string description = 10;
    uint32 createdAt = 11;
    uint32 updatedAt = 12;
  }

  uint32 total = 1;
  repeated OAuthChannel list = 2;
}

message CreateOAuthChannelRequest {
  string logo = 1[(validate.rules).string = {min_len: 1}];
  string keyword = 2[(validate.rules).string = {min_len: 1}];
  string name = 3[(validate.rules).string = {min_len: 1}];
  string ak = 4[(validate.rules).string = {min_len: 1}];
  string sk = 5[(validate.rules).string = {min_len: 1}];
  string type = 6[(validate.rules).string = {min_len: 1}];
  string extra = 7;
  string description = 8[(validate.rules).string = {min_len: 1}];
}

message CreateOAuthChannelReply {
  uint32 id = 1;
}

message UpdateOAuthChannelRequest {
  uint32 id = 1[(validate.rules).uint32 = {gte: 1}];
  optional string logo = 2;
  optional string type = 3;
  optional string name = 4;
  optional bool status = 5;
  optional string ak = 6;
  optional string sk = 7;
  optional string extra = 8;
  optional string description = 9;
}

message UpdateOAuthChannelReply {
}

message DeleteOAuthChannelRequest {
  uint32 id = 1[(validate.rules).uint32 = {gte: 1}];
}

message DeleteOAuthChannelReply {
}
