syntax = "proto3";

package manager.api.oauth;

option go_package = "manager/api/oauth;oauth";
option java_multiple_files = true;
option java_package = "manager.api.oauth";

import "api/oauth/proto/oauth.proto";
import "google/api/annotations.proto";


service OAuth{
  // ListOAuthChannelType 获取登陆渠道可用列表
  rpc ListOAuthChannelType (ListOAuthChannelTypeRequest) returns (ListOAuthChannelTypeReply) {
    option (google.api.http) = {
      get: "/manager/api/v1/oauth/channel/types",
    };
  }

  // ListOAuthChannel 获取登陆渠道列表
  rpc ListOAuthChannel (ListOAuthChannelRequest) returns (ListOAuthChannelReply) {
    option (google.api.http) = {
      get: "/manager/api/v1/oauth/channels",
    };
  }

  // CreateOAuthChannel 创建登陆渠道
  rpc CreateOAuthChannel (CreateOAuthChannelRequest) returns (CreateOAuthChannelReply) {
    option (google.api.http) = {
      post: "/manager/api/v1/oauth/channel",
      body: "*"
    };
  }

  // UpdateOAuthChannel 更新登陆渠道
  rpc UpdateOAuthChannel (UpdateOAuthChannelRequest) returns (UpdateOAuthChannelReply) {
    option (google.api.http) = {
      put: "/manager/api/v1/oauth/channel",
      body: "*"
    };
  }

  // DeleteOAuthChannel 删除登陆渠道
  rpc DeleteOAuthChannel (DeleteOAuthChannelRequest) returns (DeleteOAuthChannelReply) {
    option (google.api.http) = {
      delete: "/manager/api/v1/oauth/channel",
    };
  }
}